[gd_scene load_steps=4 format=3 uid="uid://cjeel4pcr4pi0"]

[ext_resource type="Script" path="res://game/scripts/ui/battle_manager/battle_message_log.gd" id="1_o7n7e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x7d17"]
bg_color = Color(0, 0, 0, 0.266667)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x5roh"]
bg_color = Color(0, 0, 0, 0.32549)

[node name="BattleMessageLog" type="Panel"]
z_index = 30
anchors_preset = -1
anchor_right = 0.661
anchor_bottom = 0.142
offset_right = -0.472046
offset_bottom = -0.0160065
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_x7d17")
script = ExtResource("1_o7n7e")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
follow_focus = true
horizontal_scroll_mode = 0

[node name="MessageLogList" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ExpandButton" type="Button" parent="."]
z_as_relative = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.385
anchor_right = 0.593
offset_left = 0.0149841
offset_top = -25.0
offset_right = -0.273041
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_x5roh")
text = "^ ^ ^ ^ ^"

[connection signal="pressed" from="ExpandButton" to="." method="_expand_contents"]
